Start of Java 17 upgrade